--- a/custom.css
+++ b/custom.css
@@ -1,13 +1,24 @@
 body{
     background-image: url("pics/alamofamily.png");
     background-repeat: no-repeat;
-    background-size: cover;
-
+    background-size: auto 100%;
+    background-position: center center;
+    color: white;
+}
+@media screen and (min-width:500px){
+    body{
+        background-image: url("pics/alamofamily_desktop.png");
+        background-size: 100%;
+    }
 }
 img{
-    width: 40%;
+    width: 100%;
+    height: 100%;
 }
 li{
     color: white;
     font-family: sans-serif;
+}
+body, html {
+    height: 100%;
 }
