--- a/custom.css
+++ b/custom.css
@@ -1,24 +1,26 @@
 body{
-    background-image: url("pics/alamofamily.png");
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position: center center;
-    color: white;
+    /*background-image: url("pics/alamofamily.png");*/
+    /*background-size: auto 100%;*/
+    background: #860613 no-repeat center center;
+    color: black;
 }
-@media screen and (min-width:500px){
-    body{
-        background-image: url("pics/alamofamily_desktop.png");
-        background-size: 100%;
-    }
-}
-img{
+.calc-inputs {
+    border: 1px solid black;
     width: 100%;
-    height: 100%;
+    padding: .7em;
 }
-li{
-    color: white;
-    font-family: sans-serif;
+.no-padding{
+    padding: 0px;
 }
-body, html {
-    height: 100%;
+h1{
+    font-size: 2em;
+}
+.row:after{
+    margin-bottom: 1em;
+}
+.rectangle{
+    border: 1px solid black;
+    width: 100%;
+    padding: .5em;
+    font-size: 1.7em;
 }
