--- a/custom.css
+++ b/custom.css
@@ -7,13 +7,15 @@ body{
 .calc-inputs {
     border: 1px solid black;
     width: 100%;
-    padding: .7em;
+    /*padding: .7em;*/
+    font-size: 3em;
+    text-align: center;
 }
 .no-padding{
     padding: 0px;
 }
 h1{
-    font-size: 2em;
+    font-size: 2.2em;
 }
 .row:after{
     margin-bottom: 1em;
@@ -23,4 +25,18 @@ h1{
     width: 100%;
     padding: .5em;
     font-size: 1.7em;
+    /*color: white;*/
+    font-weight: bold;
+}
+.rectangle:active{
+    background-color: rgba(28,28,28,0.21);
+}
+.square{
+    border: 1px solid black;
+    width: 20%;
+    padding: .5em;
+    margin-left: .5em;
+    font-size: 1.7em;
+    /*color: white;*/
+    font-weight: bold;
 }
