--- a/custom.css
+++ b/custom.css
@@ -11,6 +11,7 @@ body{
     font-size: 6em;
     text-align: center;
     background-color: black;
+    height: 120px;
 }
 .onetonine{
     background-color: #4a424275;
