--- a/custom.css
+++ b/custom.css
@@ -1,49 +1,142 @@
 body{
-    /*background-image: url("pics/alamofamily.png");*/
-    /*background-size: auto 100%;*/
-    background: black no-repeat center center;
-    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
-.calc-inputs {
-    border: 0;
-    width: 100%;
-    /*padding: .7em;*/
-    font-size: 6em;
+a{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+}
+li{
+    padding-bottom: 10px;
+}
+#chrispic{
+    width:100%;
+}
+#shorthr{
+    border: 2px solid black;
+    width: 50px;
+    margin-top: 17px;
+}
+#shorthrFeatured{
+    border: 2px solid black;
+    width: 2.3vw;
+    margin-top: 13px;
+    margin-left: 15px;
+}
+#shorthrlargepage{
+    border: 2px solid black;
+    width: 50px;
+    margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
+}
+.sometopmargin{
+    margin-top: 20px;
+    font-size: 17px;
+    line-height: 1.8em;
+}
+
+#marginleft{
+    margin-left: 20px;
+}
+#finalmargin{
+    /*margin-top: 50px;*/
+    /*margin-bottom: 50px;*/
+    margin: 50px auto;
+}
+.topmargin{
+    margin-top: 20px;
+}
+#video{
+    margin-top: 50px;
+    margin-bottom: 80px;
+    max-width: 540px;
+}
+#headline{
+    font-weight: bold;
+    font-size: 20px;
+}
+#headlinelarge{
+    font-weight: bold;
+    font-size: 1.12vw;
+}
+#bottomhr{
+    margin-top: 5px;
+    border: 2px solid black;
+    width: 50px;
+}
+.social [class*="fa fa-"] {
+    background-color: #333;
+    border-radius: 30px;
+    color: #fff;
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    margin: auto 3px;
+    width: 50px;
     text-align: center;
-    background-color: black;
-    height: 120px;
 }
-.onetonine{
-    background-color: #4a424275;
+#photocredit{
+    color: #e4e5e8;
 }
-.no-padding{
-    padding: 0px;
+.marginbottom{
+    margin-bottom: 20px;
 }
-h1{
-    font-size: 2.2em;
-    color: #dddddd;
+#christitle{
+    margin-top: 0;
 }
-.row:after{
-    margin-bottom: 1em;
-}
-.rectangle{
-    border: 1px solid black;
-    width: 100%;
-    padding: .5em;
-    font-size: 1.7em;
-    /*color: white;*/
+#christitlelarge{
     font-weight: bold;
-    border-radius: 50% 0;
+    margin-top: 0;
+    font-size: 30px;
 }
-.rectangle:active{
-    background-color: rgba(28,28,28,0.21);
+.removemarginleft{
+    margin-left: 0;
 }
-.square{
-    border: 1px solid black;
-    width: 20%;
-    padding: .5em;
-    margin-left: .5em;
-    font-size: 1.7em;
-    /*color: white;*/
-    font-weight: bold;
+.removeleftpadding{
+    padding-left: 0;
 }
+.removerightpadding{
+    padding-right: 0;
+}
+.paddingleft{
+    padding-left: 15px;
+}
+.paddingright{
+    padding-right: 15px;
+}
+.vl{
+    border-left: 2px solid #e4e5e8;
+    height: 1230px;
+    display: inline;
+}
+p{
+    max-width: 540px;
+}
+.leftpadding10{
+    padding-left: 10px;
+}
+.col-sm-3 li{
+    padding-bottom: 5px;
+}
+.col-sm-3 a{
+    font-size: 12px;
+}
+.col-sm-3 ul{
+    margin-left: 15px;
+}
+#facepadding{
+    padding-left: 2vw;
+}
+@media screen and  (min-width: 768px){
+    .sometopmargin{
+        font-size: 12px;
+    }
+    #video{
+        margin-top: 20px;
+    }
+    #shorthr{
+        margin-top: 20px;
+        margin-bottom: 0;
+    }
+}
+
