--- a/custom.css
+++ b/custom.css
@@ -2,11 +2,10 @@ body{
     background-color: #888;
 }
 #myNavBar{
-    /*background-color: black;*/
-    /*color: white;*/
+
 }
 #brandPic{
-    width: 100%;
+    display: none;
 }
 #mainDiv{
     margin-top: 15px;
@@ -14,10 +13,10 @@ body{
 
 .navbar-brand {
     position: absolute;
-    width: 100%;
+    width: 50%;
     left: 0;
     top: 0;
-    text-align: center;
+    text-align: left;
     margin: auto;
     /*color: white;*/
 }
@@ -26,24 +25,29 @@ body{
 }
 
 #displayPics{
-    margin: 0 auto;
-    width: 50%;
-    height: 500px;
+    width: 100%;
 }
 #currentPic{
-    max-height: 100%;
+    max-height: none;
+    max-width: 100%;
 
 }
 
-@media screen and (max-width:600px) {
+@media screen and (min-width:800px) {
     #brandPic{
-        display: none;
-    }
-    #displayPics{
+        display: block;
         width: 100%;
     }
+    #displayPics{
+        margin: 0 auto;
+        width: 50%;
+        height: 500px;
+    }
     #currentPic{
-        max-height: none;
-        max-width: 100%;
+        max-height: 100%;
+    }
+    .navbar-brand{
+        width: 100%;
+        text-align: center;
     }
 }
